added more advanced memory functions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <!-- Memory buttons -->
     <button onclick="memoryStore()">Store</button>
     <button onclick="memoryRecall()">Recall</button>
-    <button onclick="memoryClear()">Reset</button><br><br>
+    <button onclick="memoryClear()">Reset</button>
+    <button onclick="memoryAdd()">M+</button>
+    <button onclick="memorySubtract()">M-</button><br><br>
     <button onclick="runSquareRoot()"> sqrt()</button>
 
     <!-- Calculator buttons -->
@@ -48,8 +50,6 @@
     <button onclick="appendToDisplay('/')">/</button>
     <button onclick="appendToDisplay('*')">*</button><br><br>
         <!-- Add your features here -->
-
-
     
     <button onclick="appendToDisplay('7')">7</button>
     <button onclick="appendToDisplay('8')">8</button>
@@ -75,5 +75,4 @@
 <script src="calculator.js"></script>
 <script src="scripts.js"></script>
 </body>
-
 </html>
