--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
         <button class="button memory" onclick="memoryStore()">MS</button>
         <button class="button memory" onclick="memoryRecall()">MR</button>
         <button class="button memory" onclick="memoryClear()">MC</button>
-          <button onclick="memoryAdd()">M+</button>
-          <button onclick="memorySubtract()">M-</button><br><br>
-          <button onclick="runSquareRoot()"> sqrt()</button>
+        <button class="button memory" onclick="memoryAdd()">M+</button>
+        <button class="button memory" onclick="memorySubtract()">M-</button>
     </div>
 
     <div class="calculator-grid">
